Criando alguns menus e refatorando algumas funções